--- a/app/src/main/res/layout/adapter_series.xml
+++ b/app/src/main/res/layout/adapter_series.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="@dimen/cardview_default_radius"
     android:layout_margin="@dimen/half_base_margin"
-    android:orientation="vertical">
+    android:layoutDirection="ltr"
+    android:orientation="vertical"
+    app:cardCornerRadius="@dimen/cardview_default_radius">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:orientation="horizontal">
 
         <ImageView
@@ -20,36 +22,93 @@
             android:scaleType="centerCrop" />
 
         <LinearLayout
-            android:layout_marginTop="@dimen/half_base_margin"
-            android:layout_marginBottom="@dimen/half_base_margin"
-            android:padding="@dimen/half_base_margin"
+
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/half_base_margin"
+            android:layout_marginBottom="@dimen/half_base_margin"
             android:layout_weight="3"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/half_base_margin">
 
-            <TextView
-                android:id="@+id/txt_name"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Name: " />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txt_lang"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Language: " />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name: "
+                    android:textColor="@color/colorPrimary" />
 
-            <TextView
-                android:id="@+id/txt_votes"
+                <TextView
+                    android:id="@+id/txt_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/half_half_base_margin"
+                    android:text="Name: "
+                    android:textColor="@android:color/white" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Votes: " />
-            <TextView
-                android:id="@+id/txt_genres"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Language: "
+                    android:textColor="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/txt_lang"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/half_half_base_margin"
+                    android:text="Language: "
+                    android:textColor="@android:color/white" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Genres: " />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Votes: "
+                    android:textColor="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/txt_votes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/half_half_base_margin"
+                    android:text="Votes: "
+                    android:textColor="@android:color/white" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Genres: "
+                    android:textColor="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/txt_genres"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Genres: "
+                    android:textColor="@android:color/white" />
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
