--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="half_base_margin">8dp</dimen>
     <dimen name="base_margin">16dp</dimen>
+    <dimen name="half_half_base_margin">4dp</dimen>
 </resources>
