--- a/app/src/main/res/layout/fragment_series_list.xml
+++ b/app/src/main/res/layout/fragment_series_list.xml
@@ -15,6 +15,19 @@
         android:layout_margin="@dimen/base_margin"
         android:visibility="gone" />
 
+    <TextView
+        android:id="@+id/txt_try_again"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="35dp"
+        android:background="@drawable/green_rect"
+        android:gravity="center"
+        android:padding="@dimen/base_margin"
+        android:text="@string/try_again"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/content18"
+        android:visibility="gone" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
